Use some internal Java compiler classes
Configures project and build so internal modules can be used.